<resources>
    <string name="product_stock">Product Stock</string>
    <string name="button">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="contact_name">Contact Name</string>
    <string name="last_message">last message</string>
    <string name="_18_12_2018">18/12/2018</string>
    <string name="textview">TextView</string>
    <string name="type_message">Type message…</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="email_address">email address</string>
</resources>
